Made many changes in the frontend and the backend

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@vercel/analytics": "^1.5.0",
     "axios": "^1.9.0",
     "date-fns": "^4.1.0",
+    "firebase": "^11.9.1",
     "framer-motion": "^12.9.2",
     "gsap": "^3.13.0",
     "lenis": "^1.2.3",
@@ -30,6 +31,7 @@
     "react-dom": "^19.0.0",
     "react-feather": "^2.0.10",
     "react-hook-form": "^7.56.3",
+    "react-hot-toast": "^2.5.2",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.5.3",
     "react-tooltip": "^5.28.1",
