--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.2"
+    "firebase": "^11.9.1",
+    "firebase-admin": "^13.4.0",
+    "jsonwebtoken": "^9.0.2",
+    "openai": "^4.104.0"
   },
   "devDependencies": {
     "prisma": "^6.7.0"
