--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,8 @@
 VITE_API_URL="http://localhost:3000/api/v1"
+VITE_FIREBASE_API_KEY="AIzaSyBw-7L7RTC7jJAqAfw7stTNHioCf_Vm6zQ"
+VITE_FIREBASE_AUTH_DOMAIN="codefusion-27ec1.firebaseapp.com"
+VITE_FIREBASE_PROJECT_ID="codefusion-27ec1"
+VITE_FIREBASE_STORAGE_BUCKET="codefusion-27ec1.firebasestorage.app"
+VITE_FIREBASE_MESSAGING_SENDER_ID="306914024430"
+VITE_FIREBASE_APP_ID="1:306914024430:web:971ef9fdd582a0532d4cff"
+VITE_FIREBASE_MEASUREMENT_ID="G-8N4WV3YGVX"
