--- a/backend/package.json
+++ b/backend/package.json
@@ -24,7 +24,8 @@
     "firebase": "^11.9.1",
     "firebase-admin": "^13.4.0",
     "jsonwebtoken": "^9.0.2",
-    "openai": "^4.104.0"
+    "openai": "^4.104.0",
+    "postgres": "^3.4.7"
   },
   "devDependencies": {
     "prisma": "^6.7.0"
