--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@liveblocks/react": "^2.24.3",
     "@liveblocks/yjs": "^2.24.3",
     "@monaco-editor/react": "^4.7.0",
+    "@supabase/supabase-js": "^2.50.0",
     "@tailwindcss/cli": "^4.1.4",
     "@tailwindcss/vite": "^4.1.6",
     "@vercel/analytics": "^1.5.0",
