Updated the .env.sample file

--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -1,7 +1,11 @@
 PORT=
 FRONTEND_URL=
 DATABASE_URL=
-JUDGE0_API_URL=
 JWT_SECRET=
-GROQ_API_KEY=
+NOVITA_API_KEY=
 LIVEBLOCKS_SECRET_KEY=
+FIREBASE_PROJECT_ID=
+FIREBASE_PRIVATE_KEY_ID=
+FIREBASE_PRIVATE_KEY=
+FIREBASE_CLIENT_EMAIL=
+FIREBASE_CLIENT_ID=
