--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "firebase": "^11.9.1",
     "firebase-admin": "^13.4.0",
     "jsonwebtoken": "^9.0.2",
+    "nodemon": "^3.1.10",
     "openai": "^4.104.0",
     "postgres": "^3.4.7"
   },
