--- a/backend/package.json
+++ b/backend/package.json
@@ -26,7 +26,8 @@
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.10",
     "openai": "^4.104.0",
-    "postgres": "^3.4.7"
+    "postgres": "^3.4.7",
+    "prisma": "^6.7.0"
   },
   "devDependencies": {
     "prisma": "^6.7.0"
