--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -1,6 +1,7 @@
 PORT=
 FRONTEND_URL=
 DATABASE_URL=
+DIRECT_URL= 
 JWT_SECRET=
 NOVITA_API_KEY=
 LIVEBLOCKS_SECRET_KEY=
@@ -9,3 +10,5 @@ FIREBASE_PRIVATE_KEY_ID=
 FIREBASE_PRIVATE_KEY=
 FIREBASE_CLIENT_EMAIL=
 FIREBASE_CLIENT_ID=
+JUDGE0_API_KEY=
+JUDGE0_API_URL= 
