Added dotenv folder

--- a/frontend/.env
+++ b/frontend/.env
@@ -6,3 +6,4 @@ VITE_FIREBASE_STORAGE_BUCKET="codefusion-27ec1.firebasestorage.app"
 VITE_FIREBASE_MESSAGING_SENDER_ID="306914024430"
 VITE_FIREBASE_APP_ID="1:306914024430:web:971ef9fdd582a0532d4cff"
 VITE_FIREBASE_MEASUREMENT_ID="G-8N4WV3YGVX"
+VITE_DEV_BACKEND_URL = 
