--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,9 @@
     "@tailwindcss/vite": "^4.1.6",
     "@vercel/analytics": "^1.5.0",
     "axios": "^1.9.0",
+    "cors": "^2.8.5",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.5.0",
     "firebase": "^11.9.1",
     "framer-motion": "^12.9.2",
     "gsap": "^3.13.0",
