More changes done

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,4 @@
-VITE_API_URL="http://localhost:3000/api/v1"
+VITE_API_URL=https://codefusion-u7e2.onrender.com/api/v1
 VITE_FIREBASE_API_KEY="AIzaSyBw-7L7RTC7jJAqAfw7stTNHioCf_Vm6zQ"
 VITE_FIREBASE_AUTH_DOMAIN="codefusion-27ec1.firebaseapp.com"
 VITE_FIREBASE_PROJECT_ID="codefusion-27ec1"
