--- a/backend/package.json
+++ b/backend/package.json
@@ -25,8 +25,10 @@
     "csv-parser": "^3.2.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-rate-limit": "^7.5.1",
     "firebase": "^11.9.1",
     "firebase-admin": "^13.4.0",
+    "js-yaml": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.17.0",
     "mongoose": "^8.15.2",
